--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,30 @@
 <resources>
     <string name="app_name">AECC</string>
     <string name="title_activity_login">Iniciar sesión</string>
+    <string name="title_activity_home">Inicio</string>
+    <string name="title_activity_calendar">Mi calendario</string>
+    <string name="title_activity_medication">Mi medicación</string>
+    <string name="title_activity_evolution">Mi evolución</string>
+    <string name="title_activity_surveys">Mis encuestas</string>
+    <string name="title_activity_profile">Perfil</string>
+    <string name="title_activity_settings">Peferencias</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <!-- Strings -->
+    <string name="alert_pin_title">No tiene configurado un pin</string>
+    <string name="alert_pin_message">¿Desea configurar un pin para su aplicación?</string>
+    <string name="yes_button_text">Sí</string>
+    <string name="no_button_text">No</string>
+    <string name="accept_button_text">Aceptar</string>
+    <string name="url_pacientes">http://192.168.1.202:8888/aecc/android/</string>
+    <string name="metodo_validar">validar/</string>
+    <string name="error_faltan_campos">Debes introducir todos los campos.</string>
+    <string name="title_activity_principal_paciente">Inicio</string>
+    <string name="title_activity_home_patient">Inicio</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Ajustes</string>
+    <string name="action_logout">Cerrar sesión</string>
+
 </resources>
