--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AECC</string>
+    <!-- Titulos de las actividades -->
     <string name="title_activity_login">Iniciar sesión</string>
     <string name="title_activity_home">Inicio</string>
     <string name="title_activity_calendar">Mi calendario</string>
@@ -8,23 +9,31 @@
     <string name="title_activity_surveys">Mis encuestas</string>
     <string name="title_activity_profile">Perfil</string>
     <string name="title_activity_settings">Peferencias</string>
-
-    <!-- Strings -->
-    <string name="alert_pin_title">No tiene configurado un pin</string>
-    <string name="alert_pin_message">¿Desea configurar un pin para su aplicación?</string>
-    <string name="yes_button_text">Sí</string>
-    <string name="no_button_text">No</string>
-    <string name="accept_button_text">Aceptar</string>
-    <string name="url_pacientes">http://192.168.1.202:8888/aecc/android/</string>
-    <string name="metodo_validar">validar/</string>
-    <string name="error_faltan_campos">Debes introducir todos los campos.</string>
     <string name="title_activity_principal_paciente">Inicio</string>
     <string name="title_activity_home_patient">Inicio</string>
 
+
+    <string name="alert_pin_title">No tiene configurado un pin</string>
+    <string name="alert_pin_message">¿Desea configurar un pin para su aplicación?</string>
+
+    <!-- Botones genericos -->
+    <string name="yes_button_text">Sí</string>
+    <string name="no_button_text">No</string>
+    <string name="accept_button_text">Aceptar</string>
+
+    <!-- Url y metodos del servidor -->
+    <string name="url_pacientes">http://192.168.1.202:8888/aecc/android/</string>
+    <string name="metodo_validar">validar/</string>
+
+
+    <!-- Menu -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Ajustes</string>
     <string name="action_logout">Cerrar sesión</string>
 
+    <!-- Errores -->
+    <string name="error_tipo_encuesta">Ha ocurrido un error con el tipo de encuesta</string>
+    <string name="error_faltan_campos">Debes introducir todos los campos.</string>
 </resources>
